src/markdown/snapshots/mrk__markdown__tests__front_matter_is_muted_lines_then_a_rule.snap
---
source: src/markdown/mod.rs
expression: "plain_at(\"---\\ntitle: Hello\\ntags: [a, b]\\n---\\n\\nBody\", 30)"
---
title: Hello
tags: [a, b]
──────────────────────────────

Body
